k8s/vanilla-install/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aranya
  labels:
    name: aranya
    istio-injection: enabled
