k8s/vanilla-install/base/03-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: aranya-dtls-policy
  namespace: aranya
spec:
  podSelector:
    matchLabels:
      app: aranya-daemon
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - ports:
    - protocol: UDP
      port: 4321
  egress:
  - ports:
    - protocol: UDP
      port: 4321
---
apiVersion: v1
kind: Service
metadata:
  name: aranya-dtls
  namespace: aranya
spec:
  selector:
    app: aranya-daemon
  ports:
  - name: dtls-sync
    port: 4321
    targetPort: 4321
    protocol: UDP
  type: ClusterIP
